--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div id="snowfall"></div>
   <div id="tree-container">
     <div id="tree"></div>
   </div>
