upload source code 5

--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
   <div class="name">
     <p>Nguyen Quy Coder</p>
   </div>
-  <audio id="background-radio" autoplay loop>
-    <source src="./merry-christmas.mp3" type="audio/mpeg">
+  <audio id="background-radio">
+    <source src="./merry-christmas.mp3" type="audio/mp3">
   </audio>
+  <button>Play</button>
   <script src="script.js"></script>
 </body>
 </html>
